--- a/app/src/main/res/layout/activity_google_map.xml
+++ b/app/src/main/res/layout/activity_google_map.xml
@@ -8,10 +8,10 @@
     tools:context=".tool.GoogleMapActivity">
 
     <Button
-        android:id="@+id/bt_map"
+        android:id="@+id/bt_google_map"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="map" />
+        android:text="googleMap" />
 
     <Button
         android:id="@+id/bt_browser_Map"
