--- a/app/src/main/res/layout/activity_google_map.xml
+++ b/app/src/main/res/layout/activity_google_map.xml
@@ -87,4 +87,15 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_wise" />
 
 
+    <Button
+        android:id="@+id/btn_common_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="regular"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_wise" />
+
+
 </LinearLayout>
