--- a/app/src/main/res/layout/activity_key_bord.xml
+++ b/app/src/main/res/layout/activity_key_bord.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".ui.KeyBordActivity">
 
+    <com.kot.ui.LimitEditText
+        android:id="@+id/let_main"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:hint="Hello World!"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
