--- a/Mine/src/main/res/layout/activity_retrofit.xml
+++ b/Mine/src/main/res/layout/activity_retrofit.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".openlib.rxretrofit.retrofit.RetrofitActivity">
 
     <Button
@@ -10,4 +11,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="数据查询" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <Button
+        android:id="@+id/bt_get_typicode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="get article" />
+
+    <Button
+        android:id="@+id/add_article"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="add article" />
+
+
+</LinearLayout>
