--- a/app/src/main/res/layout/activity_foreground.xml
+++ b/app/src/main/res/layout/activity_foreground.xml
@@ -4,11 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".service.ForegroundActivity">
 
 
     <Button
         android:id="@+id/bt_start_service"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="startService" />
+    <Button
+        android:id="@+id/bt_data_sync"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="startService" />
