--- a/app/src/main/res/layout/activity_okhtttp.xml
+++ b/app/src/main/res/layout/activity_okhtttp.xml
@@ -1,8 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.kot.net.OkhtttpActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+        android:id="@+id/bt_reqeust"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="REQEUST" />
+
+
+    <Button
+        android:id="@+id/bt_url_connection"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="HttpUrlConnection10" />
+
+
+</LinearLayout>
